# mousemove

./: .env  Cargo.toml  Dockerfile  README.md  prompt.md  prompt2.md
scripts/: manage_release.sh
src/: main.rs  main_003.rs  main_004.rs  main_old.rs  main_v1.rs  random_move.rs  screen_size.rs
wix/: main.wxs
