[package]
name = "mousemove"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/TwistingTwists/mousemove"
authors = ["Abhishek Tripathi"]

[package.metadata.wix]
upgrade-guid = "27755305-7D09-47A4-B48C-2FF1545C5055"
path-guid = "534B670C-67A1-4135-B90E-180BFB811174"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
# dockerfile = "./Dockerfile"

[dependencies]
autopilot = "0.4.0"
rand = "0.8.4"
cfg-if = "1.0.0"

#[cfg(target_os = "windows")]
winapi = { version = "0.3.9", features = ["winuser"] }

#[cfg(target_os = "macos")]
core-graphics = "0.23.1"


#[cfg(target_os = "linux")]
x11 = "2.20.0"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


# https://youtu.be/voRBS0r4EyI?t=386
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
